# -*- Mode: Automake; indent-tabs-mode: t; tab-width: 4 -*-

xgreeterdir = $(datarootdir)/xgreeters
dist_xgreeter_DATA = unity-greeter.desktop

dist_pkgdata_DATA = \
	a11y.svg \
	active.png \
	arrow_left.png \
	arrow_right.png \
	cof.png \
	gnome_badge.png \
	kde_badge.png \
	logo.png \
	message.png \
	recovery_console_badge.png \
	remote_login_help.png \
	shadow.png \
	ubuntu_badge.png \
	unknown_badge.png \
	custom_cinnamon_badge.png \
	custom_mate_badge.png	

@GSETTINGS_RULES@
gsettings_SCHEMAS = com.canonical.unity-greeter.gschema.xml

dist_man1_MANS = unity-greeter.1

EXTRA_DIST = \
	$(gsettings_SCHEMAS)

DISTCLEANFILES = \
	Makefile.in
